--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,10 @@ verify_ssl = true
 
 [packages]
 flask = "*"
+python-dotenv = "*"
+flask-session = "*"
+redis = "*"
+flask-sqlalchemy = "*"
 
 [requires]
 python_version = "3.6"
