--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ python-dotenv = "*"
 flask-session = "*"
 redis = "*"
 flask-sqlalchemy = "*"
+gunicorn = "*"
 
 [requires]
 python_version = "3.6"
