Implement form and file upload (#4)
* Implement form and file upload

* Add sample pdb and fa files

* Add fasta_dict.py for calculation

* Add sdp dict calculation

* Add sqlite db

* Implement sample calculations without proper DB results

* Add Heroku config

--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,11 @@ verify_ssl = true
 
 [packages]
 flask = "*"
+python-dotenv = "*"
+flask-session = "*"
+redis = "*"
+flask-sqlalchemy = "*"
+gunicorn = "*"
 
 [requires]
 python_version = "3.6"
